Fixed spacing and layout issues with Header component

--- a/hector-mav-web/src/components/Header.css
+++ b/hector-mav-web/src/components/Header.css
@@ -26,12 +26,12 @@
     display: flex;
     backdrop-filter: blur(50%);
     position: fixed;
-    animation: genColorL 0.25s linear forwards, pageLoad 0.5s 0.5s linear forwards;
+    animation: pageLoad 0.5s 0.5s linear forwards;
     align-items: center;
     top: 0;
     width: 100%;
     height: 75px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* border-bottom: 1px solid rgba(30,29,29,.12); */
   }
 
@@ -46,26 +46,26 @@
 .nav-container {
   display: flex;
   margin: auto;
-  width: 85%;
-  align-items: center;
-  justify-content: space-between;
+  width: 100%;
+  height: 100%;
   animation: genColorL 0.25s linear forwards;
 }
 
 .header-nav-box {
-  align-self: center;
   display: flex;
-  align-items: flex-end;
-  gap: 1.25rem;
   margin-top: auto;
   margin-bottom: auto;
-  margin-right: -20px;
+  margin-right: 80px;
+  margin-left: auto;
   animation: genColorL 0.25s linear forwards;
-
+  gap: 41px;
 
 }
 
 .hec-mav-logo {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 80px;
   animation: genColorL 0.25s linear forwards;
 }
 
